Fix improper text wrapping around exercise figures

--- a/src/scripts/modules/media/body/content-baked.less
+++ b/src/scripts/modules/media/body/content-baked.less
@@ -302,14 +302,9 @@ h1.example-title .text {
   }
 
   img {
-    float: left;
-    margin-right: 10px;
+    display: block;
+    padding-bottom: 1em;
   }
-
-  ol {
-    overflow: hidden;
-  }
-  clear: left;
 }
 
 .os-solutions-container {
@@ -335,4 +330,3 @@ h1.example-title .text {
 .appendix [data-type="list"] {
   margin-top: 1rem;
 }
-
